# bazel_8_rust

./: README.md
all_crate_deps/: .bazelrc  Cargo.toml  MODULE.bazel
hello_world_no_cargo/: .bazelrc  MODULE.bazel
