"""bazelbuild/rules_rust - bzlmod example"""

module(
    name = "all_crate_deps_bzlmod_example",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "rules_rust", version = "0.50.1")
# local_path_override(
#     module_name = "rules_rust",
#     path = "../../..",
# )

# Rust toolchain
RUST_EDITION = "2021"
RUST_VERSION = "1.81.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_VERSION],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Crate universe from_cargo
crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
